Fix Text -Align

--- a/src/assets/scss/material-dashboard/_button.scss
+++ b/src/assets/scss/material-dashboard/_button.scss
@@ -1,13 +1,23 @@
 .d-btn {
-  margin: 10px 1px;
-  padding: 10px + 2 15px + 15;
-  font-size: 12px;
-  font-weight: 400 !important;
-  height: auto;
-  line-height: 30px;
-  color: $white !important;
-  cursor: pointer;
-  border-radius: 3px;
+
+  align-items: center;  
+  border-radius: 4px;
+  flex: 0 0 auto;
+  font-weight: 500;
+  letter-spacing: .0892857143em;
+  justify-content: center;
+  outline: 0;
+  position: relative;
+  text-decoration: none;
+  text-indent: .0892857143em;
+  text-transform: uppercase;
+  transition-duration: .28s;
+  transition-property: box-shadow,transform,opacity;
+  transition-timing-function: cubic-bezier(.4,0,.2,1);
+  user-select: none;
+  vertical-align: middle;
+  white-space: nowrap;
+  
 
   &:hover {
     background-color: #00307775 !important;
@@ -27,7 +37,7 @@
       border-radius: 50%;
     }
   }
-  :not(.v-btn__round){
+  :not(.d-btn__round){
     height: 36px;
     min-width: 64px;
     padding: 0 16px;
@@ -36,4 +46,20 @@
     height: 36px;
     font-size: .875rem;
   }
+  :not(.d-btn-disabled){
+    will-change: box-shadow;
+  }
+  
+}
+  
+.d-btn__content {
+  align-items: center;
+  color: inherit;
+  flex: 1 0 auto;
+  justify-content: inherit;
+  line-height: normal;
+  position: relative;
+}
+.d-btn--flat, .d-btn--outlined, .d-btn--text {
+  background-color: transparent;
 }
